--- a/deployment/pom.xml
+++ b/deployment/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>org.jgroups</groupId>
             <artifactId>jgroups</artifactId>
+            <version>[4.1,)</version>
         </dependency>
     </dependencies>
 
