First version of quarkus extension for JGroups (with big help from Stephane Epardaud!!)

--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -18,6 +18,15 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-arc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jgroups</groupId>
+            <artifactId>jgroups</artifactId>
+            <version>[4.1,)</version>
+        </dependency>
     </dependencies>
 
     <build>
