--- a/deployment/pom.xml
+++ b/deployment/pom.xml
@@ -19,10 +19,20 @@
             <artifactId>quarkus-core-deployment</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jgroups</groupId>
-            <artifactId>jgroups</artifactId>
-            <version>[4.1,)</version>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jgroups</artifactId>
+            <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-arc-deployment</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-junit5-internal</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
