--- a/deployment/pom.xml
+++ b/deployment/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>io.quarkus</groupId>
+        <groupId>org.jgroups.quarkus.extension</groupId>
         <artifactId>quarkus-jgroups-parent</artifactId>
         <version>0.16.1</version>
         <relativePath>../</relativePath>
@@ -19,7 +19,7 @@
             <artifactId>quarkus-core-deployment</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.quarkus</groupId>
+            <groupId>org.jgroups.quarkus.extension</groupId>
             <artifactId>quarkus-jgroups</artifactId>
             <version>${project.version}</version>
         </dependency>
