--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.jgroups</groupId>
             <artifactId>jgroups</artifactId>
-            <version>[4.1,)</version>
+            <version>4.1.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
