--- a/deployment/pom.xml
+++ b/deployment/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>quarkus-junit5-internal</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.oracle.substratevm</groupId>
+            <artifactId>svm</artifactId>
+        </dependency>
 
     </dependencies>
 
