--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jgroups.quarkus.extension</groupId>
         <artifactId>quarkus-jgroups-parent</artifactId>
-        <version>0.18.0</version>
+        <version>0.20.0</version>
         <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>org.jgroups</groupId>
             <artifactId>jgroups</artifactId>
-            <version>4.1.2-SNAPSHOT</version>
+            <version>4.1.2.Final</version>
         </dependency>
     </dependencies>
 
