--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
                 <extensions>true</extensions>
+                <version>1.6.8</version>
                 <configuration>
                     <!-- See configuration details at http://books.sonatype.com/nexus-book/reference/staging-deployment.html -->
                     <nexusUrl>${nexus.staging.url}</nexusUrl>
@@ -64,9 +65,9 @@
         </snapshotRepository>
     </distributionManagement>
 
-    <prerequisites>
+    <!--<prerequisites>
         <maven>3.0.4</maven>
-    </prerequisites>
+    </prerequisites>-->
 
     <repositories>
         <repository>
