Updated JGroups to 4.1.8.Final and Quarkus to 1.0.1.Final

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <properties>
-        <quarkus.version>0.21.2</quarkus.version>
-        <graalvm.version>19.2.0</graalvm.version>
+        <quarkus.version>1.0.1.Final</quarkus.version>
+        <graalvm.version>19.2.1</graalvm.version>
         <!-- nexus-staging-maven-plugin -->
         <autoReleaseAfterClose>true</autoReleaseAfterClose>
 
@@ -22,7 +22,7 @@
     <parent>
         <groupId>io.quarkus</groupId>
         <artifactId>quarkus-build-parent</artifactId>
-        <version>0.21.2</version>
+        <version>1.0.1.Final</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
