--- a/deployment/pom.xml
+++ b/deployment/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.jgroups.quarkus.extension</groupId>
         <artifactId>quarkus-jgroups-parent</artifactId>
-        <version>0.21.2</version>
+        <version>1.0.1.Final</version>
         <relativePath>../</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
